--- a/app/src/main/res/layout-port/fragment_list_formations_portrait.xml
+++ b/app/src/main/res/layout-port/fragment_list_formations_portrait.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/TryoutTestFragment"
+    android:id="@+id/formationMotionRootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutDescription="@xml/motion_scene_drawer"
@@ -26,11 +26,21 @@
         app:rippleColor="@color/transparent" />
 
     <!-- The Soccer Field -->
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/soccerfield"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/ysrTORecycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <RelativeLayout
         android:id="@+id/tryoutsRootViewRosterFormation"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/soccer_field"
+        android:background="@color/transparent"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/ysrTORecycler"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,13 +49,14 @@
     </RelativeLayout>
 
     <!-- The Roster List -->
-    <ImageButton
+    <androidx.constraintlayout.utils.widget.ImageFilterButton
         android:id="@+id/formationBtnRosterToggle"
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:layout_constraintBottom_toTopOf="@+id/ysrTORecycler"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@drawable/add_light" />
+        android:src="@drawable/add_light"
+        app:altSrc="@drawable/add_light" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ysrTORecycler"
