--- a/app/src/main/res/xml/motion_scene_drawer.xml
+++ b/app/src/main/res/xml/motion_scene_drawer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <!-- Define the transition between the start and end states -->
@@ -10,7 +9,20 @@
         motion:duration="600">
         <OnSwipe
             motion:dragDirection="dragUp"
+            motion:touchAnchorId="@id/ysrTORecycler"
             motion:touchAnchorSide="top" />
+
+        <OnClick
+            motion:targetId="@id/formationBtnRosterToggle"
+            motion:dragDirection="dragUp"
+            motion:touchAnchorId="@id/ysrTORecycler"
+            motion:touchAnchorSide="top" />
+
+        <KeyFrameSet>
+            <KeyAttribute
+                motion:motionTarget="@id/formationBtnRosterToggle"
+                android:rotation="45" />
+        </KeyFrameSet>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
@@ -24,6 +36,62 @@
             motion:layout_constraintRight_toRightOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintTop_toBottomOf="@+id/tryoutsRootViewRosterFormation"/>
+
+        <Constraint
+            android:id="@+id/formationBtnRosterToggle"
+            motion:animateCircleAngleTo="clockwise">
+
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="#00D81B60" />
+        </Constraint>
+
+        <Constraint
+            android:id="@id/tryoutFormationFloatingActionButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="16dp"
+            android:src="@drawable/soccer_ball_icon"
+            motion:backgroundTint="@color/transparent"
+            motion:fabSize="normal"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:maxImageSize="45dp"
+            motion:rippleColor="@color/transparent" />
+
+        <Constraint
+            android:id="@+id/soccerfield"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="visible"
+            motion:layout_constraintBottom_toTopOf="@+id/ysrTORecycler"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent">
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/tryoutsRootViewRosterFormation"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="visible"
+            motion:layout_constraintBottom_toTopOf="@+id/ysrTORecycler"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="#006C6C6C" />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/formationBtnRosterToggle"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            motion:layout_constraintBottom_toTopOf="@+id/ysrTORecycler"
+            motion:layout_constraintLeft_toLeftOf="parent"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -31,11 +99,67 @@
         <Constraint
             android:id="@+id/ysrTORecycler"
             motion:layout_constraintWidth="match_parent"
-            motion:layout_constraintHeight="wrap_content"
+            motion:layout_constraintHeight="750dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintLeft_toLeftOf="parent"
             motion:layout_constraintRight_toRightOf="parent"
             motion:layout_constraintTop_toBottomOf="@+id/tryoutsRootViewRosterFormation" />
+
+        <Constraint
+            android:id="@+id/formationBtnRosterToggle">
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="#00D81B60" />
+        </Constraint>
+
+        <Constraint
+            android:id="@id/tryoutFormationFloatingActionButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="16dp"
+            android:src="@drawable/soccer_ball_icon"
+            motion:backgroundTint="@color/transparent"
+            motion:fabSize="normal"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:maxImageSize="45dp"
+            motion:rippleColor="@color/transparent" />
+
+        <Constraint
+            android:id="@+id/soccerfield"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="visible"
+            android:layout_marginBottom="25dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent">
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/tryoutsRootViewRosterFormation"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="visible"
+            android:layout_marginBottom="25dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                motion:attributeName="backgroundColor"
+                motion:customColorValue="#6D6C6C6C" />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/formationBtnRosterToggle"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            motion:layout_constraintBottom_toTopOf="@+id/ysrTORecycler"
+            motion:layout_constraintLeft_toLeftOf="parent" />
     </ConstraintSet>
 
 </MotionScene>
