--- a/app/src/main/res/drawable-v24/border_shadow_white.xml
+++ b/app/src/main/res/drawable-v24/border_shadow_white.xml
@@ -20,7 +20,7 @@
     <!-- Background -->
     <item>
         <shape>
-            <solid android:color="#fff" />
+            <solid android:color="#79FFFFFF" />
             <corners android:radius="3dp" />
         </shape>
     </item>
