--- a/app/src/main/res/layout/card_player_formation.xml
+++ b/app/src/main/res/layout/card_player_formation.xml
@@ -1,75 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardPlayerTinyMainLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="3dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginBottom="3dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp"
-    app:cardMaxElevation="5dp">
+    android:minWidth="50dp"
+    android:minHeight="30dp">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cardPlayerTinyMainLayout"
+    <TextView
+        android:id="@+id/cardPlayerFormationTxtName"
         android:layout_width="wrap_content"
+        android:layout_height="15dp"
+        android:layout_gravity="center"
+        android:text="Player Name"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/formationCardViewLayout"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/formationCardViewLayout"
+        android:layout_width="30dp"
         android:layout_height="30dp"
-        android:minWidth="50dp"
-        android:minHeight="30dp">
-
-        <TextView
-            android:id="@+id/cardPlayerFormationTxtName"
-            android:layout_width="wrap_content"
-            android:layout_height="15dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="4dp"
-            android:drawablePadding="25dp"
-            android:text="Player Name"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/cardPlayerFormationTxtPosition"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
-
-        <TextView
-            android:id="@+id/cardPlayerFormationTxtTryOutTag"
-            android:layout_width="wrap_content"
-            android:layout_height="15dp"
-            android:layout_marginStart="4dp"
-            android:gravity="left"
-            android:text="Tryout Tag Number"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/cardPlayerFormationTxtPosition"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardPlayerFormationTxtName"
-            app:layout_constraintVertical_bias="1.0" />
+        app:cardBackgroundColor="#FF0000"
+        app:cardCornerRadius="100dp"
+        app:cardElevation="5dp"
+        app:cardMaxElevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/cardPlayerFormationTxtPosition"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="2dp"
             android:gravity="center"
             android:text="1"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            android:textSize="10sp" />
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
 
 
