--- a/app/src/main/res/layout/card_player_tiny2.xml
+++ b/app/src/main/res/layout/card_player_tiny2.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
     android:layout_height="75dp"
     android:background="@drawable/formation_badge_trans"
-    app:cardBackgroundColor="#00FFFFFF"
+    app:cardBackgroundColor="@android:color/transparent"
+    app:strokeColor="@color/black"
+    app:strokeWidth="2dp"
     app:cardCornerRadius="0dp"
-    app:cardElevation="0dp"
-    app:cardMaxElevation="0dp">
+    app:cardElevation="2dp"
+    app:cardMaxElevation="2dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -75,6 +78,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
 
 
