--- a/app/src/main/res/layout/dual_note_fragment.xml
+++ b/app/src/main/res/layout/dual_note_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/createNoteRootCard"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="10dp"
     app:cardBackgroundColor="@color/ysrWindowBackground"
     app:cardCornerRadius="10dp"
@@ -170,7 +170,7 @@
             android:id="@+id/includeNoteList"
             layout="@layout/ysr_title_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
