--- a/app/src/main/res/menu/floating_player_menu.xml
+++ b/app/src/main/res/menu/floating_player_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_player_profile"
+        android:title="Player Profile" />
+    <item
+        android:id="@+id/menu_player_make_sub"
+        android:title="Move To Substitutes" />
+    <item
         android:id="@+id/menu_player_accept"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
