--- a/app/src/main/res/layout/roster_builder_fragment.xml
+++ b/app/src/main/res/layout/roster_builder_fragment.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/rosterBuilderLudiRosterView"
-        layout="@layout/ludi_roster_builder"
+        layout="@layout/ludi_roster_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
