--- a/app/src/main/res/layout/ludi_recycler_card_view.xml
+++ b/app/src/main/res/layout/ludi_recycler_card_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<io.usys.report.ui.views.LudiRecyclerCardView
+<io.usys.report.ui.views.recyclerViews.LudiRecyclerCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -51,4 +51,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</io.usys.report.ui.views.LudiRecyclerCardView>
+</io.usys.report.ui.views.recyclerViews.LudiRecyclerCardView>
