--- a/app/src/main/res/layout/fragment_roster_vg.xml
+++ b/app/src/main/res/layout/fragment_roster_vg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<io.usys.report.ui.views.LudiLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ludiRosterVGLinearLayout"
@@ -10,4 +10,4 @@
 
 
 
-</LinearLayout>
+</io.usys.report.ui.views.LudiLinearLayout>
