--- a/app/src/main/res/layout/ludi_roster_view.xml
+++ b/app/src/main/res/layout/ludi_roster_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<io.usys.report.ui.views.recyclerViews.LudiRosterView
+<io.usys.report.ui.ludi.roster.LudiRosterRecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,4 +10,4 @@
     android:background="@color/transparent"
     android:orientation="vertical">
 
-</io.usys.report.ui.views.recyclerViews.LudiRosterView>
+</io.usys.report.ui.ludi.roster.LudiRosterRecyclerView>
