--- a/app/src/main/res/layout/roster_builder_fragment.xml
+++ b/app/src/main/res/layout/roster_builder_fragment.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout
+<io.usys.report.ui.views.LudiConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutDescription="@xml/roster_builder_fragment_scene">
-
 
     <include
         android:id="@+id/rosterBuilderLudiRosterView"
@@ -19,4 +18,4 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</io.usys.report.ui.views.LudiConstraintLayout>
